# chess_fen_parser

./: Cargo.toml  Makefile  README.md  example_fen.txt
src/: fen.pest  lib.rs  main.rs
tests/: fen_tests.rs
