[package]
name = "chess_fen_parser"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Parser for Forsyth-Edwards Notation."
repository = "https://github.com/dmytryk28/chess_fen_parser"

[dependencies]
anyhow = "1.0"
pest = "^2.8"
pest_derive = "^2.8"
thiserror = "2.0.17"
clap = { version = "4", features = ["derive"] }
